--- a/FetchAPI/xhr-basic.html
+++ b/FetchAPI/xhr-basic.html
@@ -75,7 +75,14 @@
             verse = verse.toLowerCase();
             let url = verse + '.txt';
 
-            fetch(url).then(function(response) {
+            // fetch(url).then(function(response) {
+            //     response.text().then(function(text) {
+            //         poemDisplay.textContent = text;
+            //     })
+            // })
+
+            let myFetch = fetch(url);
+            myFetch.then(function(response) {
                 response.text().then(function(text) {
                     poemDisplay.textContent = text;
                 })
